inventing cas-field
