# jupyter_cassini_server/schema/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2024-08-30T12:05:41+00:00
+#   timestamp: 2024-08-30T14:14:57+00:00
 
 from __future__ import annotations
 
@@ -35,11 +35,17 @@ class NotebookTierInfo(CommontTierInfo):
     tierType: Literal['notebook']
 
 
+class XCasField(Enum):
+    private = 'private'
+    core = 'core'
+
+
 class Properties(BaseModel):
     title: Optional[str] = None
     type: Optional[str] = None
     default: Optional[Any] = None
     format: Optional[str] = None
+    x_cas_field: Optional[XCasField] = Field(None, alias='x-cas-field')
 
 
 class MetaSchema(BaseModel):
